--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,10 @@
 html, body {
 	height: 100;
 }
-
+@font-face {
+    font-family: 'CollegeFont';
+    src: url('colleges.ttf') format('truetype');
+}
 body{
 	display: flex;
 	flex-direction: column;
@@ -10,8 +13,27 @@ body{
 
 main{
 	flex: 1 0 auto;
+	background-color: #8b8c89;
 }
 
+.red-slash {
+    color: red; 
+}
+
+.namecenter {
+    text-shadow: rgba(255,255,255,0.9) 0px 0px 39px;
+}
+
+.lead{
+	font-style: bold;
+}
+.titledp{
+	font-family: 'CollegeFont', sans-serif;
+}
+
+.navy{
+	background-color: #c5c5c5;
+}
 
 header{
  background: no-repeat center center;
@@ -28,6 +50,7 @@ header{
 	max-width: 750px;
 
 }
+
 
 footer{
 	background-color: #3a3a3a;
