--- a/custom.css
+++ b/custom.css
@@ -1,70 +1,181 @@
-html, body {
-	height: 100;
-}
-@font-face {
-    font-family: 'CollegeFont';
-    src: url('colleges.ttf') format('truetype');
-}
-body{
-	display: flex;
-	flex-direction: column;
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background: #262626;
+            font-family: 'CollegeFont', sans-serif;
+        }
 
-}
+        body {
+            display: flex;
+            flex-direction: column;
+        }
 
-main{
-	flex: 1 0 auto;
-	background-color: #8b8c89;
-}
+        #profilepic {
+            border: 1px solid black;
+            margin-left: 20px;
+        }
 
-.red-slash {
-    color: red; 
-}
+        main {
+            flex: 1 0 auto;
+            background-color: #8b8c89;
+        }
 
-.namecenter {
-    text-shadow: rgba(255,255,255,0.9) 0px 0px 39px;
-}
+        .red-slash {
+            color: red;
+        }
 
-.lead{
-	font-style: bold;
-}
-.titledp{
-	font-family: 'CollegeFont', sans-serif;
-}
+        .namecenter {
+            text-shadow: rgba(255, 255, 255, 0.9) 0px 0px 39px;
+        }
 
-.navy{
-	background-color: #c5c5c5;
-}
+        .titledp {
+            font-family: 'CollegeFont', sans-serif;
+        }
 
-header{
- background: no-repeat center center;
- background-size: cover;
- color: white;	
-}
+        .navy {
+            background-color: #c5c5c5;
+        }
 
-.color-overlay{
-	background-color: rgba(0, 0, 0, 0.4);
-	min-height: 60vh;
-}
+        header {
+            background: no-repeat center center;
+            background-size: cover;
+            color: white;
+        }
 
-.singleCol{
-	max-width: 750px;
+        .color-overlay {
+            background-color: rgba(0, 0, 0, 0.4);
+            min-height: 60vh;
+        }
 
-}
+        .singleCol {
+            max-width: 750px;
+        }
 
+        footer {
+            background-color: #3a3a3a;
+            flex-shrink: 0;
+        }
 
-footer{
-	background-color: #3a3a3a;
-	flex-shrink: 0;
+        footer a {
+            color: white;
+        }
 
-}
-footer a{
-	color: white;
-}
-footer a:hover{
-	color: #dfdfdf;
-}
-@media (max-width: 767.98px){
-	.color-overlay{
-		min-height: 30vh;
-	}
-}
+        footer a:hover {
+            color: #dfdfdf;
+        }
+
+        @media (max-width: 767.98px) {
+            .color-overlay {
+                min-height: 30vh;
+            }
+        }
+
+        /* Added Animation CSS */
+        .animation-container {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .animation-container li {
+            list-style: none;
+            margin: 0 15px;
+        }
+
+        .animation-container li a {
+            position: relative;
+            display: block;
+            width: 60px;
+            height: 60px;
+            text-align: center;
+            line-height: 63px;
+            background: #333;
+            border-radius: 50%;
+            font-size: 30px;
+            color: #666;
+            transition: .5s;
+        }
+
+        .animation-container li a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: #ffee10;
+            transition: .5s;
+            transform: scale(.9);
+            z-index: -1;
+        }
+
+        .animation-container li a:hover::before {
+            transform: scale(1.1);
+            box-shadow: 0 0 15px #ffee10;
+        }
+
+        .animation-container li a:hover {
+            color: #ffee10;
+            box-shadow: 0 0 5px #ffee10;
+            text-shadow: 0 0 5px #ffee10;
+        }
+
+		#cardscon {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+		}
+		
+		#cardbtn {
+			position: relative;
+			border-top-right-radius: 10px;
+			border-bottom-left-radius: 10px;
+			transition: all 1s;
+			z-index: 1; /* Added z-index */
+		
+			&:after,
+			&:before {
+				content: " ";
+				width: 10px;
+				height: 10px;
+				position: absolute;
+				border: 0px solid #fff;
+				transition: all 1s;
+				z-index: -1; /* Set z-index to place them behind the button */
+			}
+		
+			&:after {
+				top: 0; /* Adjusted positioning */
+				left: 0;
+				border-top: 5px solid black;
+				border-left: 5px solid black;
+			}
+		
+			&:before {
+				bottom: 0; /* Adjusted positioning */
+				right: 0;
+				border-bottom: 5px solid black;
+				border-right: 5px solid black;
+			}
+		
+			&:hover {
+				border-top-right-radius: 0px;
+				border-bottom-left-radius: 0px;
+				background: rgba(0, 0, 0, 0.5);
+				color: white;
+		
+				&:before,
+				&:after {
+					width: 100%;
+					height: 100%;
+					border-color: white;
+				}
+			}
+		}
+		
