--- a/custom.css
+++ b/custom.css
@@ -9,8 +9,72 @@
         body {
             display: flex;
             flex-direction: column;
+            opacity: 0;
+            animation: fadeIn 0.3s ease-in-out forwards;
+          }
+      
+          @keyframes fadeIn {
+            from {
+              opacity: 0;
+              transform: translateY(-50px);
+            }
+            to {
+              opacity: 1;
+              transform: translateY(0);
+            }
+          }
+
+
+        h1{
+            font-family: 'Sigmar', sans-serif;                          
         }
 
+        #aboutas{
+            font-family: 'Freich', sans-serif;
+        }
+        h2{
+            font-family: 'Freich', sans-serif;
+            
+        }
+
+        h5{
+            font-family: 'Freich', sans-serif;
+                                                
+        }
+
+        #desc{
+            font-family: 'Noto Sans Syriac Eastern', sans-serif;
+                                                         
+                                                
+        }
+
+        #interest{
+            font-family: 'Freich', sans-serif;
+                                                
+        }
+        #contactchnge{
+            font-family: 'Noto Serif Toto', sans-serif;          
+                                                
+        }
+        #contactchnge a {
+            color: rgb(63, 63, 63);
+          }
+
+        label{
+            font-family: 'ADLaM Display', sans-serif;
+                                                
+                                                
+        }
+        #navchange{
+            font-family: 'Albert Sans', sans-serif;
+                                                
+                                                
+        }
+
+        p{
+            font-family: 'Noto Kufi Arabic', sans-serif;
+                                                                                   
+        }
         #profilepic {
             border: 1px solid black;
             margin-left: 20px;
@@ -65,13 +129,8 @@
             color: #dfdfdf;
         }
 
-        @media (max-width: 767.98px) {
-            .color-overlay {
-                min-height: 30vh;
-            }
-        }
 
-        /* Added Animation CSS */
+
         .animation-container {
             margin: 0;
             padding: 0;
@@ -109,7 +168,7 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            background: #ffee10;
+            background: #ffee1b;
             transition: .5s;
             transform: scale(.9);
             z-index: -1;
@@ -147,18 +206,18 @@
 				position: absolute;
 				border: 0px solid #fff;
 				transition: all 1s;
-				z-index: -1; /* Set z-index to place them behind the button */
+				z-index: -1; 
 			}
 		
 			&:after {
-				top: 0; /* Adjusted positioning */
+				top: 0; 
 				left: 0;
 				border-top: 5px solid black;
 				border-left: 5px solid black;
 			}
 		
 			&:before {
-				bottom: 0; /* Adjusted positioning */
+				bottom: 0; 
 				right: 0;
 				border-bottom: 5px solid black;
 				border-right: 5px solid black;
@@ -178,4 +237,9 @@
 				}
 			}
 		}
-		
+
+        @media (max-width: 767.98px) {
+            .color-overlay {
+                min-height: 30vh;
+            }
+        }
